--- a/test/browser-exchange/index.html
+++ b/test/browser-exchange/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" href="./deps/normalize.css">
   <link rel="stylesheet" href="./deps/milligram.css">
+  <link rel="stylesheet" href="./app.css">
 
   <script src="./deps/eosjs-dist.js"></script>
   <script src="./deps/sunbeam-dist.js"></script>
