demo: fix demo for new flags and scopes

--- a/test/browser-test/index.html
+++ b/test/browser-test/index.html
@@ -37,7 +37,7 @@
       const sb = new Sunbeam(eos, { account: 'testuser1234' })
 
       const order = sb.createOrder({
-        symbol: 'BTCUSD',
+        symbol: 'BTC.USD',
         price: '1338',
         amount: '1.337',
         type: 'EXCHANGE_LIMIT',
